--- a/server/demo/index.html
+++ b/server/demo/index.html
@@ -11,22 +11,22 @@
     <form method="POST" name="occupationForm" id="occupationForm">
         <select id="floor">
             <option value="" disabled selected>Select floor</option>
-            <option value="food">0</option>
-            <option value="food">1</option>
-            <option value="food">2</option>
-            <option value="food">3</option>
-            <option value="food">4</option>
+            <option value="0">0</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
         </select>
         <select id="cell">
             <option value="" disabled selected>Select cell</option>
-            <option value="food">1</option>
-            <option value="food">2</option>
-            <option value="food">3</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
         </select>
         <select id="state">
             <option value="" disabled selected>Select state</option>
-            <option value="food">true</option>
-            <option value="food">false</option>
+            <option value="true">free</option>
+            <option value="false">occupy</option>
         </select>
         <input type="submit" value="update occupation">
     </form>
